# spheni

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.pypi.md  build.sh  build_spheni.sh  example.cpp  loc.sh  pyproject.toml  spheni_min
.github/workflows/: publish-python.yml
docs/: api-reference.md  benchmark.md  benchmarks.md  v0.2.md  v0.3.md
docs/arch/: v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.1.1.md  v0.1.md  v0.2.md  v0.3.md
docs/benchmarks/: benchmarks.md
docs/legacy/benchmarks/: benchmarks.md
docs/releases/: v0.1.1.md
docs/wiki/: building.md  cpp_api.md  python_api.md
examples/: flat.cpp  geospatial.py  ivf.cpp  ivf_pq.cpp  pq_flat.cpp
examples/flat/: example.cpp
examples/ivf/: example.cpp
include/: spheni.h
include/spheni/: engine.h  spheni.h
python/spheni/: __init__.py
src/core/: engine.cpp  factory.cpp  flat_index.cpp  flat_index.h  ivf_index.cpp  ivf_index.h  serialize.h
src/indexes/: flat.cpp  ivf.cpp  ivf_pq.cpp  pq_flat.cpp
src/indexes/flat/: flat_index.cpp  flat_index.h
src/indexes/ivf/: ivf_index.cpp  ivf_index.h
src/io/: serialize.h
src/math/: kernels.cpp  kernels.h  kmeans.cpp  kmeans.h  math.h  pq.h  topk.cpp  topk.h  utils.h
src/python/: bindings.cpp
src/storage/: quantization.h
src/utils/: kernels.cpp  kernels.h  kmeans.cpp  kmeans.h  quantization.h  topk.cpp  topk.h
